--- a/p1-6-structure-5.ipynb
+++ b/p1-6-structure-5.ipynb
@@ -78,11 +78,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number:  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a valid number. Try again...\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your number is: 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input('Please enter a number: '))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Not a valid number. Try again...')\n",
+    "\n",
+    "print('Your number is:', x)"
    ]
   },
   {
@@ -96,11 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handling run-time error: division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def this_fails():\n",
+    "    x = 1/0\n",
+    "\n",
+    "try:\n",
+    "    this_fails()\n",
+    "except ZeroDivisionError as err:\n",
+    "    print('Handling run-time error:', err)"
    ]
   },
   {
