--- a/p1-9-oo-3.ipynb
+++ b/p1-9-oo-3.ipynb
@@ -30,11 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog:\n",
+    "    \n",
+    "    kind = \"\"\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        return 'woof-woof'\n",
+    "    \n",
+    "a = Dog('Fido')\n",
+    "b = Dog('Buddy')"
    ]
   },
   {
@@ -63,47 +74,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidae'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Dog.kind = 'canidae'\n",
+    "a.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidae'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fido'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Buddy'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'woof-woof'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.bark()"
    ]
   },
   {
@@ -134,38 +201,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat:\n",
+    "    \n",
+    "    knid = \"felidae\"\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def meow(self):\n",
+    "        return 'meow-meow'\n",
+    "\n",
+    "c = Cat('Garfield')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'felidae'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.knid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Garfield'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'meow-meow'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.meow()"
    ]
   },
   {
@@ -191,11 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Animal:\n",
+    "    \n",
+    "    knid = \"\"\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def voice(self):\n",
+    "        return '...'"
    ]
   },
   {
@@ -209,11 +327,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog(Animal):\n",
+    "    \n",
+    "    knid = \"canidae\"\n",
+    "    \n",
+    "    def voice(self):\n",
+    "        return 'woof-woof'\n",
+    "    \n",
+    "    bark = voice"
    ]
   },
   {
@@ -225,11 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat(Animal):\n",
+    "    \n",
+    "    kind = \"felidae\"\n",
+    "    \n",
+    "    def voice(self):\n",
+    "        return 'meow-meow'\n",
+    "    \n",
+    "    meow = voice"
    ]
   },
   {
@@ -241,20 +373,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "a = Animal('キュゥべえ')\n",
+    "c = Cat('Garfield')\n",
+    "d = Dog('Snoopy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "キュゥべえ : ...\n",
+      "Garfield : meow-meow\n",
+      "Snoopy : woof-woof\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in [a, c, d]:\n",
+    "    print(animal.name, ':', animal.voice())"
    ]
   },
   {
