--- a/p1-4-structure-3.ipynb
+++ b/p1-4-structure-3.ipynb
@@ -97,6 +97,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14 是偶数\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randrange\n",
+    "o = randrange(-20,3)\n",
+    "if abs(o) % 2 ==0:\n",
+    "    print(o, '是偶数')\n",
+    "else:\n",
+    "    print(o, '是奇数')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
