--- a/p1-9-oo-3.ipynb
+++ b/p1-9-oo-3.ipynb
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dog:\n",
     "    \n",
-    "    kind = \"\"\n",
+    "    kind = ''\n",
     "    \n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
@@ -201,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cat:\n",
     "    \n",
-    "    knid = \"felidae\"\n",
+    "    kind = 'felidae'\n",
     "    \n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -229,13 +229,13 @@
        "'felidae'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.knid"
+    "c.kind"
    ]
   },
   {
@@ -301,13 +301,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal:\n",
     "    \n",
-    "    knid = \"\"\n",
+    "    kind = ''\n",
     "    \n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
@@ -327,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dog(Animal):\n",
     "    \n",
-    "    knid = \"canidae\"\n",
+    "    kind = 'canidae'\n",
     "    \n",
     "    def voice(self):\n",
     "        return 'woof-woof'\n",
@@ -350,13 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cat(Animal):\n",
     "    \n",
-    "    kind = \"felidae\"\n",
+    "    kind = 'felidae'\n",
     "    \n",
     "    def voice(self):\n",
     "        return 'meow-meow'\n",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +409,184 @@
     "仔细看上面的代码，`a` `c` `d` 虽然是不同类的对象实例，但是因为它们都是 `Animal` 或其子类的对象实例，所以拥有 `Animal` 类所定义的标准接口（**继承**），从而可以在一个循环中一视同仁的处理，而且不同类的对象实例自动调用了各自类定义的 `voice()` 方法实现，产生各自正确的输出（**多态**）。\n",
     "\n",
     "所以其实也不复杂吧？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Duck(Animal):\n",
+    "    \n",
+    "    kind = 'anatidae'\n",
+    "        \n",
+    "    def voice(self):\n",
+    "        return 'quack-quack'\n",
+    "    \n",
+    "    quack = voice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = Duck('Donald Duck')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'quack-quack'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.quack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Donald Duck'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'anatidae'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.kind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class implement:\n",
+    "    \n",
+    "    kind = ''\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def property(self):\n",
+    "        return '...'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class pencil(implement):\n",
+    "    \n",
+    "    kind = 'writing implement'\n",
+    "    \n",
+    "    def property(self):\n",
+    "        return 'erasable'\n",
+    "    \n",
+    "z = pencil('Caran')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'writing implement'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.kind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Caran'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'erasable'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.property()"
    ]
   },
   {
