--- a/p2-1-function-def.ipynb
+++ b/p2-1-function-def.ipynb
@@ -32,11 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def do_nothing():\n",
+    "    pass\n",
+    "\n",
+    "do_nothing()"
    ]
   },
   {
@@ -60,11 +63,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'async',\n",
+       " 'await',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import keyword\n",
+    "keyword.kwlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keyword.iskeyword(\"name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keyword.iskeyword(\"True\")"
    ]
   },
   {
@@ -103,11 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program exits. Bye!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def exit_info():\n",
+    "    print(\"Program exits. Bye!\")\n",
+    "\n",
+    "exit_info()"
    ]
   },
   {
@@ -126,11 +226,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def leap_year(begin, end):\n",
+    "    year = begin\n",
+    "    while year < end:\n",
+    "        if (year % 4 == 0 and year % 100 != 0) or year % 400 == 0:\n",
+    "            print(year)\n",
+    "        year += 1\n",
+    "        \n",
+    "leap_year(2000, 2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2056\n",
+      "2060\n",
+      "2064\n",
+      "2068\n",
+      "2072\n",
+      "2076\n",
+      "2080\n",
+      "2084\n",
+      "2088\n",
+      "2092\n",
+      "2096\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leap_year(begin, end):\n",
+    "    year = begin\n",
+    "    while year < end:\n",
+    "        if year % 4 == 0:\n",
+    "            if year % 100 == 0:\n",
+    "                if year % 400 == 0:\n",
+    "                    print(year)\n",
+    "                    year += 1\n",
+    "                else:\n",
+    "                    year += 1\n",
+    "                    pass\n",
+    "            else:\n",
+    "                print(year)\n",
+    "                year += 1\n",
+    "        else:\n",
+    "            year += 1\n",
+    "            pass\n",
+    "            \n",
+    "\n",
+    "leap_year(2054, 2099)"
    ]
   },
   {
@@ -160,11 +325,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "bool(None)"
    ]
   },
   {
@@ -185,11 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def idiv(a, b):\n",
+    "    quotient = a // b\n",
+    "    remainder = a % b\n",
+    "    return quotient, remainder\n",
+    "\n",
+    "q, r = idiv(18, 4)\n",
+    "print(q, r)"
    ]
   },
   {
@@ -215,11 +405,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def increase_one(n):\n",
+    "    n += 1\n",
+    "    return n\n",
+    "\n",
+    "n = 1\n",
+    "print(increase_one(n))\n",
+    "print(n)"
    ]
   },
   {
@@ -276,29 +481,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name, msg = \"Hi\"):\n",
+    "    print(f\"{msg}, {name}!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, neo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting(\"neo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good afternoon, Neo!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting(\"Neo\", \"Good afternoon\")"
    ]
   },
   {
@@ -326,11 +548,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def greeting(name, msg = \"Hi\", punc = \"!\"):\n",
+    "    print(f\"{msg}, {name}{punc}\")"
    ]
   },
   {
@@ -342,11 +565,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting(\"Neo\", punc = \".\")"
    ]
   },
   {
@@ -364,11 +595,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good afternoon, Neo.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "greeting(\"Neo\", punc = \".\", msg = \"Good afternoon\")"
    ]
   },
   {
@@ -389,38 +628,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def say_hi(*names):\n",
+    "    for name in names:\n",
+    "        print(\"Hi, \", name, \"!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,  Neo !\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi(\"Neo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,  Neo\n",
+      "Hi,  Tracy\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi(\"Neo\", \"Tracy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,  Neo\n",
+      "Hi,  Tracy\n",
+      "Hi,  Bella\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi(\"Neo\", \"Tracy\", \"Bella\")"
    ]
   },
   {
@@ -453,20 +721,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def say_hi(*names, msg = \"Hi\", punc = \"!\"):\n",
+    "    for name in names:\n",
+    "        print(f\"{msg}, {name}{punc}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo.\n",
+      "Hi, Tracy.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "say_hi(\"Neo\", \"Tracy\", punc = \".\")"
    ]
   },
   {
